# St_Nicholas

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM32F042F6Px_FLASH.ld
Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_cortex.c  stm32f0xx_hal_pcd.c  stm32f0xx_hal_pwr.c  stm32f0xx_hal_rcc.c
Inc/: adc.h  gpio.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c  usbd_ctlreq.c
Src/: adc.c  gpio.c  main.c  main.c.autosave  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c  tim.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
board_ATtiny13A/: CMakeLists.txt  README.md  main.c  makefile
board_ATtiny13A/Src/: main.c
board_ATtiny13A/cmake/: avr-gcc-toolchain.cmake
board_ATtiny13A/makefiles/: gcc-avr.mak
board_ArduinoNano/: README.md  board_ArduinoNano.ino  schema_st_Nicolas.graphml
board_WatchDog/: CMakeLists.txt  Makefile  README.md
board_WatchDog/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_ll_adc.h
board_WatchDog/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_tim.c  stm32f0xx_ll_adc.c
board_WatchDog/Inc/: adc.h  gpio.h  stm32f0xx_hal_conf.h  usbd_cdc_if.h  usbd_desc.h
board_WatchDog/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
board_WatchDog/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
board_WatchDog/Src/: gpio.c  main.c  main.c.autosave  stm32f0xx_hal_msp.c  system_stm32f0xx.c  usb_device.c
board_WatchDog/cmake/: arm-gcc-toolchain.cmake
